--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 /*Ashleigh Lyman*/
-/*Assignment 7.3*/
+/*Assignment 9.3*/
 /*CSS style page*/
 
 
 /*Background color is pale blue green*/
 
-
-
+			
+@media only screen and (max-width: 1024px) {
+	body { margin: 0; }
+	#wrapper { width: auto; }
+	main { margin-left: 0; }
+	h1, h2 { font-size: 120%; }
+	p { font-size: 90%; }		
+}
+			
+@media only screen and (max-width: 768px) {
+	h1, h2 { font-size: 100%; }
+	p { font-size: 100%; }			
+}	 
 
 body{
 	background-color: #7f9ba1;
